migrate to SpringBoot 3.x